--- a/app/src/main/res/layout/activity_chosunggame.xml
+++ b/app/src/main/res/layout/activity_chosunggame.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".chosungmovie"
+    tools:context=".chosunggame"
     android:background="@drawable/background">
 
 
@@ -12,15 +12,33 @@
         android:id="@+id/textView7"
         android:layout_width="364dp"
         android:layout_height="286dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/bmjua_ttf"
         android:gravity="center"
-        android:maxLines="2"
+        android:maxLines="3"
         android:rotationX="0"
         android:text=""
+        android:textColor="#000000"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView22" />
+
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="271dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="36dp"
+        android:fontFamily="@font/bmjua_ttf"
+        android:gravity="center"
+        android:maxLines="3"
+        android:rotationX="0"
+        android:text="주제 : "
+        android:textColor="#2196F3"
+        android:textSize="44sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
